# CV

./: .env.example  .gitignore  ARCHITECTURE.md  CNAME  README.md  pyproject.toml  requirements.txt  wrangler.jsonc
.github/workflows/: approve-submit.yml  daily-search.yml  deploy-pages.yml
config/: app_settings.json  jobs.yaml  sources.yaml
data/: cv2016.md  master_cv.md
docs/: app.js  index.html  style.css
prompts/: candidate_profile.md  scoring_prompt.md  scraping_prompt.md  search_prompt.md  writing_prompt.md
public/: index.html
runs/: index.html
runs/2026-04-04/Example_Bank_Head_of_Transaction_Banking_Sales/: analysis.txt  job.json  note.txt
runs/2026-04-20/: queue.jsonl
runs/2026-04-20/barclays_financial_crime_risk_transaction_monitoring_control_owner/: job.json  scoring.json
scripts/: build_index.py  format_summary.py  generate_application.py  reject_application.py  search_and_score.py  submit_application.py
src/cv_agent/: __init__.py  cli.py  models.py  pipeline.py  settings.py  state.py  utils.py
src/cv_agent/collectors/: careers.py  linkedin_email.py  rss_jobs.py
src/cv_agent/editorial/: cv_generator.py  scorer.py
src/cv_agent/extractors/: job_description.py
src/cv_agent/llm/: client.py
src/cv_agent/render/: cv_html.py  index_html.py  report_html.py
src/cv_agent/render/templates/: cv-template.html  index-template.html  report-template.html
src/cv_agent/submit/: playwright_apply.py
tests/: test_generator_contract.py  test_llm_fallback.py  test_scorer.py  test_state.py  test_utils.py
